# autodub

./: .gitignore  pyproject.toml  pyproject_pyannote.toml  setup.py
autodub/audio/: audio_separation.py  vad.py
autodub/video/: video_process.py
