[tool.poetry]
name = "autodub"
version = "0.0.1"
description = "Dub your movies."
authors = ["Youval Vanlaer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
